--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
+    "axios": "^1.13.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-safe-area-context": "^5.6.2",
